# django-complete-guide

./: pyproject.toml
book_store/: db.sqlite3
book_store/book_outlet/: admin.py  models.py  views.py
book_store/book_outlet/migrations/: 0001_initial.py  0002_auto_20220729_1026.py  0003_book_slug.py  0004_auto_20220801_1848.py  0005_auto_20220801_1859.py  0006_auto_20220801_1908.py  0007_auto_20220803_0921.py
book_store/book_outlet/templates/book_outlet/: book_detail.html  index.html
book_store/book_store/: settings.py  urls.py
feedback/: db.sqlite3
feedback/feedback/: settings.py  urls.py
feedback/profiles/: models.py  urls.py  views.py
feedback/profiles/migrations/: 0001_initial.py
feedback/profiles/templates/profiles/: user_profiles.html
feedback/reviews/: forms.py  models.py  urls.py  views.py
feedback/reviews/templates/reviews/: single_review.html  thank-you.html
feedback/uploads/images/: MATRIX.txt
monthly_challenges/challenges/: urls.py  views.py
monthly_challenges/challenges/static/challenges/: challenge.css  challenges.css
monthly_challenges/challenges/templates/challenges/: challenge.html  (+1 more)
monthly_challenges/monthly_challenges/: asgi.py  settings.py  urls.py  wsgi.py
monthly_challenges/static/: styles.css
monthly_challenges/templates/: 404.html  base.html
my_site/: db.sqlite3
my_site/blog/: admin.py  models.py  urls.py  views.py
my_site/blog/migrations/: 0001_initial.py  0002_auto_20221219_1646.py  0003_comment.py
my_site/my_site/: settings.py  urls.py
my_site/static/: app.css
my_site/templates/: 404.html  base.html
(+7 files in other folders)
